# sharkey.rs

./: Cargo.toml  README.markdown  cli.sh
.github/workflows/: rust.yml
scripting/: scripting.sh
src/: lib.rs  main.rs
src/modules/: actions.rs  bridge.rs  cli.rs  enums.rs  error.rs  extra.rs  extras.rs  mod.rs  network.rs  payloads.rs  responses.rs  tests.rs
