[package]
name = "sharkey"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Alyx Shang"]
description= "A tiny library to perform actions on Sharkey using Rust."
homepage = "https://github.com/alyxshang/sharkey.rs"
repository = "https://github.com/alyxshang/sharkey.rs"
documentation = "https://github.com/alyxshang/sharkey.rs"
readme = "README.markdown"

[dependencies]
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
cliply = { git = "https://github.com/alyxshang/cliply", tag = "v.0.1.0" }

[features]
cli = []
